--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ info@devstudio.com</a>
         </ul>
       </div>
     </section>
-      <section class="examples">
+      <!-- <section class="examples">
         <div class="container" >
         <h2>Чем мы занимаемся</h2>
         <ul class="examples-list">
@@ -155,7 +155,7 @@ info@devstudio.com</a>
           </li>
         </ul>
       </div>
-      </section>
+      </section> -->
       <section class="team-section">
         <div class="container">
         <h2 class="team-heading">Наша команда</h2>
@@ -326,7 +326,7 @@ info@devstudio.com</a>
       </section>
       <section  class="client-section">
         <div class="container">
-        <h2>Постоянные клиенты</h2>
+        <h2 class="c">Постоянные клиенты</h2>
         <ul class="client">
           <li class="element-client">
             <a class="klient-link" href=""
