почти сделала клиенты и преимущества

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ info@devstudio.com</a>
           </li>
           <li >
             <div class="advantages-element"><svg  class="icon" width="70"
-                height="54">
+                height="70">
               <use class="fu" href="./images/sprite.svg#icon-diagram"    ></use>
             </svg></div>
                       <h3>ПЛАНИРОВАНИЕ</h3>
@@ -118,7 +118,7 @@ info@devstudio.com</a>
         </ul>
       </div>
     </section>
-      <!-- <section class="examples">
+      <section class="examples">
         <div class="container" >
         <h2>Чем мы занимаемся</h2>
         <ul class="examples-list">
@@ -155,7 +155,7 @@ info@devstudio.com</a>
           </li>
         </ul>
       </div>
-      </section> -->
+      </section>
       <section class="team-section">
         <div class="container">
         <h2 class="team-heading">Наша команда</h2>
