--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@ info@devstudio.com</a>
     </main>
     <footer class="footer" >
       <div class="container">
-        <div class="adress-container">
+        <div class="additional-container">
+          <div class="adress-container">
         <a href="index.html" class="logo-web"> <span>Web</span></a>
         <a href="index.html" class="logo-studio">
           <span>Studio</span>
@@ -418,8 +419,9 @@ info@devstudio.com</a>
           </li>
         </ul>
       </div>
-      <!-- <div class="mailing-container"> -->
-        <form class="mailing-container" action="" method="post">
+      </div>
+      <div class="mailing-container">
+        <form class="mailing-form" action="" method="post">
           <!-- Разметка элементов этой формы -->
           <label>
             ПОДПИШИТЕСЬ НА РАССЫЛКУ
@@ -433,8 +435,7 @@ info@devstudio.com</a>
           </button>
         </form>
                   </div>
-       <p class="end">2020 | Developed by GoIT Students</p>
-             </footer>
+                    </footer>
 <!--Разметка формы и бекдропа-->
    
   <div class="backdrop is-hidden" data-modal>
