--- a/portfolio.html
+++ b/portfolio.html
@@ -83,13 +83,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    class=""
-                    src="./images/img12-min.jpg"
-                    alt="ноут с фото"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source srcset="
+                                          ./images/technokryak-450.jpg    1x,
+                                          ./images/technokryak-900@2x.jpg 2x
+                                        " media="(max-width: 767px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/technokryak-354.jpg        1x,
+                                          ./images/technokryak-708@2x.jpg.jpg 2x
+                                        " media="(max-width: 1199px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/technokryak-370.jpg    1x,
+                                          ./images/technokryak-740@2x.jpg 2x
+                                        " media="(min-width: 1200px)" type="image/jpg">
+                    <img src="./images/technokryak-450.jpg " alt="картинка с ноутбуком">
+                  </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -105,12 +113,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img4-min.jpg"
-                    alt="два баскетболиста"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source srcset="
+                                          ./images/poster-new-orlean-vs-golden-star-450.jpg    1x,
+                                          ./images/poster-new-orlean-vs-golden-star-900@2x.jpg 2x
+                                        " media="(max-width: 767px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/poster-new-orlean-vs-golden-star-354.jpg        1x,
+                                          ./images/poster-new-orlean-vs-golden-star-708@2x.jpg.jpg 2x
+                                        " media="(max-width: 1199px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/poster-new-orlean-vs-golden-star-370.jpg    1x,
+                                          ./images/poster-new-orlean-vs-golden-star-740@2x.jpg 2x
+                                        " media="(min-width: 1200px)" type="image/jpg">
+                    <img src="./images/poster-new-orlean-vs-golden-star-450.jpg " alt="картинка с баскетболистами">
+                  </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -126,12 +143,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img5-min.jpg"
-                    alt="рыба с надписью"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source srcset="
+                                          ./images/restaurant-sea-food-450.jpg    1x,
+                                          ./images/restaurant-sea-food-900@2x.jpg 2x
+                                        " media="(max-width: 767px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/restaurant-sea-food-354.jpg        1x,
+                                          ./images/restaurant-sea-food-708@2x.jpg.jpg 2x
+                                        " media="(max-width: 1199px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/restaurant-sea-food-370.jpg    1x,
+                                          ./images/restaurant-sea-food-740@2x.jpg 2x
+                                        " media="(min-width: 1200px)" type="image/jpg">
+                    <img src="./images/restaurant-sea-food-450.jpg " alt="картинка банера ресторана морепродуктов">
+                  </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -147,12 +173,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img6-min.jpg"
-                    alt="наушники"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source srcset="
+                                          ./images/project-prime-450.jpg    1x,
+                                          ./images/project-prime-900@2x.jpg 2x
+                                        " media="(max-width: 767px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/project-prime-354.jpg        1x,
+                                          ./images/project-prime-708@2x.jpg.jpg 2x
+                                        " media="(max-width: 1199px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/project-prime-370.jpg    1x,
+                                          ./images/project-prime-740@2x.jpg 2x
+                                        " media="(min-width: 1200px)" type="image/jpg">
+                    <img src="./images/project-prime-450.jpg " alt="картинка наушников">
+                  </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -168,12 +203,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img7-min.jpg"
-                    alt="две коробки"
-                    width="370"
-                    height="294"
-                  />
+                <picture>
+                  <source srcset="
+                                        ./images/project-boxes-450.jpg    1x,
+                                        ./images/project-boxes-900@2x.jpg 2x
+                                      " media="(max-width: 767px)" type="image/jpg">
+                  <source srcset="
+                                        ./images/project-boxes-354.jpg        1x,
+                                        ./images/project-boxes-708@2x.jpg.jpg 2x
+                                      " media="(max-width: 1199px)" type="image/jpg">
+                  <source srcset="
+                                        ./images/project-boxes-370.jpg    1x,
+                                        ./images/project-boxes-740@2x.jpg 2x
+                                      " media="(min-width: 1200px)" type="image/jpg">
+                  <img src="./images/project-boxes-450.jpg " alt="картинка с коробочками">
+                </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -189,12 +233,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img8-min.jpg"
-                    alt="монитор"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source srcset="
+                                          ./images/inspiration-has-no-borders-450.jpg    1x,
+                                          ./images/inspiration-has-no-borders-900@2x.jpg 2x
+                                        " media="(max-width: 767px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/inspiration-has-no-borders-354.jpg        1x,
+                                          ./images/inspiration-has-no-borders-708@2x.jpg.jpg 2x
+                                        " media="(max-width: 1199px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/inspiration-has-no-borders-370.jpg    1x,
+                                          ./images/inspiration-has-no-borders-740@2x.jpg 2x
+                                        " media="(min-width: 1200px)" type="image/jpg">
+                    <img src="./images/inspiration-has-no-borders-450.jpg " alt="картинка с монитором">
+                  </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -210,12 +263,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img9-min.jpg"
-                    alt="книга"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source srcset="
+                                          ./images/publication-limited-edition-450.jpg    1x,
+                                          ./images/publication-limited-edition-900@2x.jpg 2x
+                                        " media="(max-width: 767px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/publication-limited-edition-354.jpg        1x,
+                                          ./images/publication-limited-edition-708@2x.jpg.jpg 2x
+                                        " media="(max-width: 1199px)" type="image/jpg">
+                    <source srcset="
+                                          ./images/publication-limited-edition-370.jpg    1x,
+                                          ./images/publication-limited-edition-740@2x.jpg 2x
+                                        " media="(min-width: 1200px)" type="image/jpg">
+                    <img src="./images/publication-limited-edition-450.jpg " alt="картинка с книгой">
+                  </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -231,12 +293,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img10-min.jpg"
-                    alt="бирка"
-                    width="370"
-                    height="294"
-                  />
+                <picture>
+                  <source srcset="
+                                        ./images/project-lab-450.jpg    1x,
+                                        ./images/project-lab-900@2x.jpg 2x
+                                      " media="(max-width: 767px)" type="image/jpg">
+                  <source srcset="
+                                        ./images/project-lab-354.jpg        1x,
+                                        ./images/project-lab-708@2x.jpg.jpg 2x
+                                      " media="(max-width: 1199px)" type="image/jpg">
+                  <source srcset="
+                                        ./images/project-lab-370.jpg    1x,
+                                        ./images/project-lab-740@2x.jpg 2x
+                                      " media="(min-width: 1200px)" type="image/jpg">
+                  <img src="./images/project-lab-450.jpg " alt="картинка с ярлыком">
+                </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -252,12 +323,21 @@
             <li class="tehnokrak-element">
               <a class="tehnokrak-link" href="">
                 <div class="tehnokrak-img">
-                  <img
-                    src="./images/img11-min.jpg"
-                    alt="ноутбук"
-                    width="370"
-                    height="294"
-                  />
+                <picture>
+                  <source srcset="
+                                        ./images/growing-business-450.jpg    1x,
+                                        ./images/growing-business-900@2x.jpg 2x
+                                      " media="(max-width: 767px)" type="image/jpg">
+                  <source srcset="
+                                        ./images/growing-business-354.jpg        1x,
+                                        ./images/growing-business-708@2x.jpg.jpg 2x
+                                      " media="(max-width: 1199px)" type="image/jpg">
+                  <source srcset="
+                                        ./images/growing-business-370.jpg    1x,
+                                        ./images/growing-business-740@2x.jpg 2x
+                                      " media="(min-width: 1200px)" type="image/jpg">
+                  <img src="./images/growing-business-450.jpg " alt="картинка с ноутбуком">
+                </picture>
                   <p class="overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
