--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
       <!-- </nav> -->
           <ul class="adress-nav">
         <li class="item" >
-        <a class="" href="">
-          <svg class="mails" width="16" height="12">
+        <a class="mails" href="">
+          <svg class="" width="16" height="12">
             <use href="./images/sprite.svg#icon-letter"></use>
           </svg>
 info@devstudio.com</a>
         </li   >
           <li class="item">
             <a class="mails" href="">
-              <svg class="fone" width="10" height="15">
+              <svg class="" width="10" height="15">
                 <use href="./images/sprite.svg#icon-fone"></use>
               </svg>    +38 096 111 11 11</a>
         </li>
