--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ info@devstudio.com</a>
         </li>
       </ul>
       </div>
-      <button type="button" class="menu-button"    aria-expanded="false" aria-controls="menu-container" data-menu-button>
-        <svg class="menu-icon" width="40" height="40" aria-label="Переключатель мобильного меню" >
+      <button type="button" class="menu-button"    aria-expanded="false"  data-menu-button>
+        <svg class="menu-icon" width="40" height="40" aria-label="Переключатель мобильного меню" aria-controls="menu-container">
           <use class="icon-menu" href="./images/sprite1.svg#icon-menu1"></use>
           <use class="icon-cross" href="./images/sprite1.svg#icon-closed-mark"></use>
         </svg>
